--- a/Pickaxe.MinecraftData.Reader.Tests/Pickaxe.MinecraftData.Reader.Tests.csproj
+++ b/Pickaxe.MinecraftData.Reader.Tests/Pickaxe.MinecraftData.Reader.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pickaxe.MinecraftData.Parser\Pickaxe.MinecraftData.Parser.csproj" />
+    <ProjectReference Include="..\Pickaxe.MinecraftData.Reader\Pickaxe.MinecraftData.Reader.csproj" />
   </ItemGroup>
 
 </Project>
