--- a/Pickaxe.MinecraftData.Reader/Pickaxe.MinecraftData.Reader.csproj
+++ b/Pickaxe.MinecraftData.Reader/Pickaxe.MinecraftData.Reader.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
